--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   flutter_svg: ^2.0.9
   cached_network_image: ^3.3.0
   google_sign_in: ^6.1.6
+  provider: ^6.1.1
+  uuid: ^4.2.1
 
 # The following adds the Cupertino Icons font to your application.
 # Use with the CupertinoIcons class for iOS style icons.
